# nx-react-python-notes

./: .gitignore  README.md  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
apps/notes-api/: .coverage  README.md  project.json  pyproject.toml
apps/notes-api/notes_api/: main.py
apps/notes-api/tests/: __init__.py
apps/nx-react-python-notes/: app.json  index.html  metro.config.js  package.json  project.json  vite.config.ts
apps/nx-react-python-notes-e2e/: playwright.config.ts  project.json
apps/nx-react-python-notes-e2e/src/: example.spec.ts
apps/nx-react-python-notes/android/: settings.gradle
apps/nx-react-python-notes/android/app/: build.gradle
apps/nx-react-python-notes/ios/: Podfile
apps/nx-react-python-notes/ios/NxReactPythonNotes/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
apps/nx-react-python-notes/ios/NxReactPythonNotes.xcodeproj/: project.pbxproj
apps/nx-react-python-notes/ios/NxReactPythonNotes.xcworkspace/: contents.xcworkspacedata
apps/nx-react-python-notes/ios/NxReactPythonNotesTests/: NxReactPythonNotesTests.m
apps/nx-react-python-notes/src/: main.tsx
apps/nx-react-python-notes/src/app/: App.tsx
libs/note/: jest.config.ts  project.json  tsconfig.lib.json
libs/note/src/: note.tsx
libs/notes-data/: .coverage  README.md  project.json  pyproject.toml
libs/notes-data/notes_data/: __init__.py  notes_data.py
libs/ui-shared/src/: index.ts
reports/apps/notes-api/unittests/: junit.xml
reports/libs/notes-data/unittests/: junit.xml
(+7 files in other folders)
