[tool.nx]
autoActivate = true

[tool.poetry]
name = "@nx-react-python-notes/source"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

[tool.poetry.dependencies.notes_api]
path = "apps/notes-api"
develop = true

[tool.poetry.group.dev.dependencies]
autopep8 = "2.3.1"
flake8 = "7.1.1"
pytest = "8.3.4"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
pytest-html = "4.1.1"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"